# django_filter_spike

./: .gitignore  README.md  pyproject.toml
api/: urls.py
api/foo/: filters.py  serializers.py  urls.py  views.py
foo/: admin.py  factories.py  models.py
foo/management/commands/: create_books.py  create_documents.py  create_instances.py
foo/migrations/: 0001_initial.py  0002_book.py  0003_author.py  0004_publisher.py  0005_use_author_model_for_author.py
foo/models/: __init__.py  author.py  book.py  document.py  publisher.py
spike/: settings.py  urls.py
