[tool.poetry]
name = "managers_spike"
version = "0.1.0"
description = "About"
authors = ["Just for the sake of playing around with Django managers"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
