[tool.poetry]
name = "managers_spike"
version = "0.1.0"
description = "About"
authors = ["Just for the sake of playing around with Django managers"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.8"
factory_boy = "^2.12.0"
django-extensions = "^3.0.3"
ipython = "^7.16.1"
djangorestframework = "^3.11.0"

[tool.poetry.dev-dependencies]
black = {version = "^19.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
